@@ -31,7 +31,7 @@
  * @package org.zenmagick.model.catalog
  * @version $Id$
  */
-class ZMReview extends ZMModel {
+class ZMReview extends ZMObject {
     private $rating_;
     private $productId_;
     private $text_;
@@ -63,18 +63,6 @@ class ZMReview extends ZMModel {
         parent::__destruct();
     }
 
-
-    /**
-     * Populate all available fields from the given request.
-     *
-     * @param array req A request; if <code>null</code>, use the current <code>ZMRequest</code> instead.
-     */
-    function populate($req=null) {
-        $this->rating_ = ZMRequest::getParameter('rating', 0);
-        $this->productId_ = ZMRequest::getParameter('products_id', 0);
-        $this->text_ = ZMRequest::getParameter('review_text', '');
-        return;
-    }
 
     /**
      * Get the review id.
