@@ -36,27 +36,20 @@
   </div>
 </form>
 
-<?php $form->open(FILENAME_PRODUCT_REVIEWS_WRITE, 'action=process&products_id=' . $zm_product->getId(), true, array('id'=>'review')) ?>
+<?php $form->open(FILENAME_PRODUCT_REVIEWS_WRITE, 'action=process&productId=' . $zm_product->getId(), true, array('id'=>'review')) ?>
     <fieldset>
         <legend><?php zm_l10n("New Review") ?></legend>
         <p><?php zm_l10n("Choose a ranking for this item. 1 star is the worst and 5 stars is the best.") ?></p>
 
         <div id="stars">
-            <input type="radio" id="rating-1" name="rating" value="1" />
-            <label for="rating-1"><img src="<?php $zm_theme->themeURL("images/stars_1_small.gif") ?>" alt="<?php zm_l10n("One Star") ?>" title=" <?php zm_l10n("One Star") ?> " /></label>
-            <input type="radio" id="rating-2" name="rating" value="2" />
-            <label for="rating-2"><img src="<?php $zm_theme->themeURL("images/stars_2_small.gif") ?>" alt="<?php zm_l10n("Two Stars") ?>" title=" <?php zm_l10n("Two Stars") ?> " /></label>
-            <input type="radio" id="rating-3" name="rating" value="3" />
-            <label for="rating-3"><img src="<?php $zm_theme->themeURL("images/stars_3_small.gif") ?>" alt="<?php zm_l10n("Three Stars") ?>" title=" <?php zm_l10n("Three Stars") ?> " /></label>
-            <input type="radio" id="rating-4" name="rating" value="4" />
-            <label for="rating-4"><img src="<?php $zm_theme->themeURL("images/stars_4_small.gif") ?>" alt="<?php zm_l10n("Four Stars") ?>" title=" <?php zm_l10n("Four Stars") ?> " /></label>
-            <input type="radio" id="rating-5" name="rating" value="5" />
-            <label for="rating-5"><img src="<?php $zm_theme->themeURL("images/stars_5_small.gif") ?>" alt="<?php zm_l10n("Five Stars") ?>" title=" <?php zm_l10n("Five Stars") ?> " /></label>
-
+            <?php for ($ii=1; $ii<6; ++$ii) { $checked = ($review->getRating() == $ii ? ' checked="checked"' : ''); ?>
+              <input type="radio" id="rating-<?php echo $ii ?>" name="rating" value="<?php echo $ii ?>"<?php echo $checked ?> />
+              <label for="rating-<?php echo $ii ?>"><img src="<?php $zm_theme->themeURL("images/stars_".$ii."_small.gif") ?>" alt="<?php zm_l10n("%s Star", $ii) ?>" title=" <?php zm_l10n("%s Star", $ii) ?> " /></label>
+            <?php } ?>
         </div>
 
-        <label for="review_text"><?php zm_l10n("Please tell us what you think and share your opinions with others. Be sure to focus your comments on the product.") ?></label>
-        <textarea id="review_text" name="review_text" cols="60" rows="5"><?php $html->encode(ZMRequest::getParameter("review_text")) ?></textarea>
+        <label for="text"><?php zm_l10n("Please tell us what you think and share your opinions with others. Be sure to focus your comments on the product.") ?></label>
+        <textarea id="text" name="text" cols="60" rows="5"><?php $html->encode($review->getText()) ?></textarea>
         <div class="btn"><input type="submit" class="btn" value="<?php zm_l10n("Send") ?>" /></div>
         <div>
             <strong><?php zm_l10n("NOTE:") ?> </strong><?php zm_l10n("HTML tags are not allowed.") ?><br />
