@@ -1,6 +1,8 @@
 Release 0.9.6
 - add sanitize parameter to ZMRequest::getParameterMap()
 - add form bean code to ZMController
+- convert review form to using the new mapping based form handling and
+  validation code
 
 Release 0.9.5
 - add ZMDbUtils::buildTableMapping(...)
